. Add the gene ontology analysis (done)
. Mult-factor analysis (done)
Write a short report on the RNA-Seq data. (done)

.Intermediate term
. Genome annotations using the RNA-Seq data sets.
. de novo assembly using RNA-Seq (Find tools)

.Long term
. Study of evolution of bacterial gene expression 

Jobs to be finished
-------------------
NA

Histories
---------
This history can be useful later.


Fri Jan 20 15:43:51 EST 2012
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Wed Jan 18 11:12:00 EST 2012
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Find gene descriptions of UA159. 

Mon Jan 16 15:26:38 EST 2012
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
GSE8850 is the data files from Abranches2008 study.
----
http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE8850
downloads/gse8850
http://www.tm4.org/midas.html
http://linus.nci.nih.gov/BRB-ArrayTools.html
----

Fri Jan 13 12:52:52 EST 2012
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
I need to summarize predicted transcripts. I may find Bioconductor R packages
useful.
----
The following packages illustrate the diversity of functionality available; all
are in the release version of Bioconductor.
IRanges, GenomicRanges and genomeIntervals for range-based (e.g., chromosomal
regions) calculation, data manipulation, and general-purpose data
representation. Biostrings for alignment, pattern matching (e.g., primer
removal), and data manipulation of large biological sequences or sets of
sequences.
ShortRead and Rsamtools for file I/O, quality assessment, and high-level,
general purpose data summary. rtracklayer for import and export of tracks on the
UCSC genome browser.
BSgenome for accessing and manipulating curated whole-genome representations.
GenomicFeatures for annotation of sequence features across common genomes,
biomaRt for access to Biomart databases.
SRAdb for querying and retrieving data from the Sequence Read Archive.
ChIP-seq and related (e.g., motif discovery, identification of high-coverage
segments) activities are facilitated by packages such as CSAR, chipseq,