@@ -46,9 +46,18 @@ Histories
 This history can be useful later.
 
 
+Sat Jan 21 15:15:24 EST 2012
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.Margin in R
+----
+http://research.stowers-institute.org/efg/R/Graphics/Basics/mar-oma/index.htm
+----
+
 Fri Jan 20 15:43:51 EST 2012
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+Visualize functional classes.
+R package clusterProfile
+Let's use R function pie.
 
 Wed Jan 18 11:12:00 EST 2012
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
